Fix popup would appear behind cerditos!

--- a/client/src/Bebe.css
+++ b/client/src/Bebe.css
@@ -85,6 +85,7 @@ body {
     position: absolute;
     margin: 2em;
     text-align: center;
+    z-index: 1000;
 }
 .popup.dream {
     background-color: var(--bebe-fg);
